<resources>

    <string name="app_name">Medroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_medroid">Medroid</string>
    <string name="title_activity_user_login">User Login</string>
    <string name="title_activity_user_reg">User Registration</string>
    <string name="title_activity_user_dashboard">User Dashboard</string>
    <string name="title_activity_mcq_viewer">MCQ View</string>
    <string name="btnSubmitAnswer">Submit Answer</string>
    <string name="btnNext">Next</string>
    <string name="btnStartStop">Start</string>
    <string name="btnPrev">Prev</string>
    <string name="prefix_choice_a">A. </string>
    <string name="prefix_choice_b">B. </string>
    <string name="prefix_choice_c">C. </string>
    <string name="prefix_choice_d">D. </string>
    <string name="prefix_choice_e">E. </string>
    <string name="title_activity_start_test">StartTestActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_test_profile">TestProfileActivity</string>
    <string name="title_activity_perf_analysis">PerfAnalysisActivity</string>
    <string name="title_activity_buy_subscription">BuySubscriptionActivity</string>
    <string name="title_activity_newsfeed">NewsfeedActivity</string>
    <string name="welcome">Welcome to Meditrainer</string>
    <string name="title_activity_qs_nav_list">QSNavListActivity</string>
    <string name="noi">Number Int</string>
    <string name="nos">Number String</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="lbl_UID">User ID(UID)</string>
    <string name="lbl_QSID">Question Sheet ID(QSID)</string>
    <string name="lbl_sample_max">Total Sample Questions</string>

</resources>